# messager

./: .clang-format  .gitignore  CMakeLists.txt  macos_llvm_env.sh
client/: CMakeLists.txt  main.cxx
client/include/: client.h
client/src/: client.cxx
client/tests/: CMakeLists.txt  test_client.cxx
cmake/: ProjectOptions.cmake
common/: CMakeLists.txt
common/include/: connection.h
common/src/: connection.cxx
common/tests/: CMakeLists.txt  test_connection.cxx
server/: CMakeLists.txt  main.cxx
server/include/: server.h
server/src/: server.cxx
server/tests/: CMakeLists.txt  test_server.cxx
